# cudaviz

./: .gitignore  CMakeLists.txt  Plot.ipynb  README.md  Untitled.ipynb  graph.py  pyproject.toml
cmake/: dependencies.cmake
cudaviz/: CMakeLists.txt  __init__.py  binding.cpp  diffusion.py  mandelbrot.py  matmul.py  ray_trace.py  ripple.py
include/cudaviz/: Diffusion  Mandelbrot  MatMul  RayTrace  Ripple  cudaviz  cudaviz.hpp  cudzviz.cuh  kernels.hpp
src/: CMakeLists.txt  check_error.hpp  cuda_buffer.hpp  cudaviz.cu  diffusion.cpp  main.cpp  main.cu  mandelbrot.cpp  matmul.cpp  ray_trace.cpp  ripple.cpp
